<resources>
    <string name="app_name">ProyectoMoviles</string>
    <string name="Titulo">MangaHub</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="escribe_tu_alias_shinobi">Escribe tu alias shinobi.</string>
    <string name="inserta_tu_clave_de_maestro_pok_mon">Inserta tu clave de maestro Pokémon.</string>
    <string name="perdiste_tu_pergamino_secreto">¿Perdiste tu pergamino secreto?</string>
    <string name="es_hora_de_la_acci_n">¡Es hora de la acción!</string>
    <string name="RegistroText">Crea tu cuenta y desbloquea todo un universo de historias.</string>
    <string name="Registro">Crea tu cuenta</string>
    <string name="escribe_tu_verdadero_nombre">Escribe tu verdadero nombre.</string>
    <string name="tu_b_ho_mensajero_necesita_una_direcci_n">Tu búho mensajero necesita una dirección.</string>
    <string name="tu_nombre_de_batalla_en_este_mundo">Tu nombre de batalla en este mundo.</string>
    <string name="registra_tu_nivel_de_experiencia">Registra tu nivel de experiencia.</string>
    <string name="protege_tus_secretos_como_un_ninja">Protege tus secretos como un ninja.</string>
    <string name="nete_a_la_sociedad_de_almas">¡Únete a la sociedad de almas!</string>
    <string name="no_te_preocupes_si_est_s_perdido_un_h_roe_siempre_tiene_un_camino_hacia_la_soluci_n">¡No te preocupes! Si estás perdido, un héroe siempre tiene un camino hacia la solución.</string>
    <string name="abortar_misi_n_capit_n">Abortar misión, capitán</string>
    <string name="al_unirte_a_esta_batalla_aceptas_las_reglas_del_juego_el_destino_est_en_tus_manos">Al unirte a esta batalla, aceptas las reglas del juego. ¡El destino está en tus manos!</string>

    //Eliminar ------------------------------------------
    <string name="titulo_eliminar">Eliminar</string>

    <string name="eliminiar_text_manga">Elimina los restos que no te sirvan para la aventura.</string>
    <string name="eliminiar_text_evento">Vuelve al pasado y enmienda los errores cometidos.</string>
    <string name="eliminiar_text_usuario">Preparate para eliminar a un soldado.</string>

    <string name="boton_eliminar_usuario">Confirmar aniquilación</string>
    <string name="boton_eliminar_evento">Confirmar viaje al pasado</string>
    <string name="boton_eliminar_manga">Confirmar eliminación de restos</string>
    //----------------------------------------------------

    //Modificar ------------------------------------------
    <string name="titulo_modificar">Modificar</string>
    <string name="escribir_id">Escribir código especial.</string>
    <string name="modificar_nombre_usuario">Tu nombre del mundo real.</string>
    <string name="modificar_fecha_usuario">¿Cuándo entraste en el Muro?</string>
    <string name="modificar_correo_usuario">Correo del enlace virtual.</string>
    <string name="modificar_area_usuario">¿A que escuadrón perteneces?</string>
    <string name="modificar_nivel_acceso_usuario">Selecciona tu rango de Cazador.</string>
    <string-array name="niveles_acceso">
        <item>Nivel 1</item>
        <item>Nivel 2</item>
        <item>Nivel 3</item>
    </string-array>

    <string-array name="generos">
        <item>Shonen</item>
        <item>Seinen</item>
        <item>Shojo</item>
        <item>Josei</item>
        <item>Mecha</item>
        <item>Horror</item>
        <item>Spokon</item>
        <item>Slice of Life</item>
        <item>Isekai</item>
        <item>Fantasy</item>
        <item>Comedy</item>
        <item>Harem</item>


    </string-array>

    <string name="modificar_informacion">Escribir la información.</string>
    <string name="boton_modificar_usuario">¡Modificar la sociedad de almas!</string>
    <string name="boton_modificar_producto">Modificar Producto</string>
    <string name="boton_modificar_evento">Modificar Evento</string>
    <string name="boton_regreso">Volver!</string>
    <string name="placeholder">placeholder</string>
    <string name="titulo_agregar">Agregar</string>

    <string name="precio_template">Precio: $%s</string>

</resources>
