<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="354dp"
            android:layout_height="78dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_shape"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/HeaderTitle"
                android:layout_width="228dp"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/sawarabi"
                android:gravity="center"
                android:text="@string/Titulo"
                android:textColor="@android:color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivLogo"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="74dp"
                android:layout_height="58dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/logo_description"
                android:src="@drawable/logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.428" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="315dp"
            android:layout_height="605dp"
            android:layout_marginTop="112dp"
            android:background="@drawable/border_shape"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="229dp"
                android:layout_height="45dp"
                android:fontFamily="@font/sawarabi"
                android:gravity="center"
                android:text="@string/Registro"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/sawarabi"
                android:text="Nombre:"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.049"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="276dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_layout"
                android:fontFamily="@font/sawarabi"
                android:hint="@string/escribe_tu_verdadero_nombre"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/sawarabi"
                android:text="Alias:"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.044"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNombre" />

            <EditText
                android:id="@+id/etAlias"
                android:layout_width="276dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_layout"
                android:fontFamily="@font/sawarabi"
                android:hint="@string/tu_nombre_de_batalla_en_este_mundo"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etNombre" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/sawarabi"
                android:text="Correo:"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAlias" />

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="276dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_layout"
                android:fontFamily="@font/sawarabi"
                android:hint="@string/tu_b_ho_mensajero_necesita_una_direcci_n"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etAlias" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/sawarabi"
                android:text="Edad:"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etCorreo" />

            <EditText
                android:id="@+id/etEdad"
                android:layout_width="276dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_layout"
                android:fontFamily="@font/sawarabi"
                android:hint="@string/registra_tu_nivel_de_experiencia"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etCorreo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/sawarabi"
                android:text="Contraseña:"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEdad" />

            <EditText
                android:id="@+id/etClave"
                android:layout_width="276dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/border_layout"
                android:fontFamily="@font/sawarabi"
                android:hint="@string/protege_tus_secretos_como_un_ninja"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etEdad" />

            <TextView
                android:id="@+id/tvRecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sawarabi"
                android:text="@string/perdiste_tu_pergamino_secreto"
                android:textColor="@android:color/darker_gray"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etClave" />

            <Button
                android:id="@+id/btnInicioSesion"
                android:layout_width="237dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/sawarabi"
                android:text="@string/nete_a_la_sociedad_de_almas"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvRecover" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="123dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnInicioSesion"
        app:layout_constraintVertical_bias="0.764">

        <TextView
            android:id="@+id/tvAyuda"
            android:layout_width="296dp"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sawarabi"
            android:gravity="center"
            android:text="@string/no_te_preocupes_si_est_s_perdido_un_h_roe_siempre_tiene_un_camino_hacia_la_soluci_n"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRegresar"
            android:layout_width="294dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button_secundary"
            android:fontFamily="@font/sawarabi"
            android:text="@string/abortar_misi_n_capit_n"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAyuda" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>