<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivbackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="310dp"
        android:layout_height="806dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_shape"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="229dp"
            android:layout_height="45dp"
            android:fontFamily="@font/sawarabi"
            android:gravity="center"
            android:text="@string/titulo_modificar"
            android:textColor="@color/color_font_principal"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sawarabi"
            android:text="ID:"
            android:textColor="@color/color_font_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <EditText
            android:id="@+id/etIdAModificar"
            android:layout_width="276dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_layout"
            android:fontFamily="@font/sawarabi"
            android:hint="@string/escribir_id"
            android:drawableEnd="@drawable/ic_lupa_24"
            android:padding="10dp"
            android:textColor="@color/color_font_principal"
            android:textColorHint="@color/color_font_secundario_gris_medio"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sawarabi"
            android:text="Nombre:"
            android:textColor="@color/color_font_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etIdAModificar" />

        <EditText
            android:id="@+id/etNombreModificar"
            android:layout_width="276dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/border_layout"
            android:fontFamily="@font/sawarabi"
            android:hint="@string/modificar_nombre_usuario"
            android:padding="10dp"
            android:textColor="@color/color_font_principal"
            android:textColorHint="@color/color_font_secundario_gris_medio"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etIdAModificar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sawarabi"
            android:text="Alias:"
            android:textColor="@color/color_font_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNombreModificar" />

        <EditText
            android:id="@+id/etAliasModificar"
            android:layout_width="276dp"
            android:layout_height="48dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/border_layout"
            android:fontFamily="@font/sawarabi"
            android:hint="@string/tu_nombre_de_batalla_en_este_mundo"
            android:padding="10dp"
            android:textColor="@color/color_font_principal"
            android:textColorHint="@color/color_font_secundario_gris_medio"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNombreModificar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sawarabi"
            android:text="Fecha de Alta:"
            android:textColor="@color/color_font_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.027"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAliasModificar" />

        <EditText
            android:id="@+id/etFechaModificar"
            android:layout_width="276dp"
            android:layout_height="48dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/border_layout"
            android:fontFamily="@font/sawarabi"
            android:hint="@string/modificar_fecha_usuario"
            android:padding="10dp"
            android:textColor="@color/color_font_principal"
            android:textColorHint="@color/color_font_secundario_gris_medio"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAliasModificar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:fontFamily="@font/sawarabi"
            android:text="Correo:"
            android:textColor="@color/color_font_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.025"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAliasModificar" />

        <EditText
            android:id="@+id/etCorreoModificar"
            android:layout_width="276dp"
            android:layout_height="48dp"
            android:layout_marginTop="132dp"
            android:background="@drawable/border_layout"
            android:fontFamily="@font/sawarabi"
            android:hint="@string/modificar_correo_usuario"
            android:padding="10dp"
            android:textColor="@color/color_font_principal"
            android:textColorHint="@color/color_font_secundario_gris_medio"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAliasModificar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sawarabi"
            android:text="Área Responsable:"
            android:textColor="@color/color_font_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCorreoModificar" />

        <EditText
            android:id="@+id/etAreaModificar"
            android:layout_width="276dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_layout"
            android:fontFamily="@font/sawarabi"
            android:hint="@string/modificar_area_usuario"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/color_font_principal"
            android:textColorHint="@color/color_font_secundario_gris_medio"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etCorreoModificar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/sawarabi"
            android:text="Nivel de Acceso:"
            android:textColor="@color/color_font_principal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAreaModificar" />

        <Button
            android:id="@+id/btnModificar"
            android:layout_width="235dp"
            android:layout_height="41dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_modificar_background_selector"
            android:fontFamily="@font/sawarabi"
            android:text="@string/boton_modificar_usuario"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spNivelAccesoModificar" />

        <Spinner
            android:id="@+id/spNivelAccesoModificar"
            android:layout_width="276dp"
            android:layout_height="48dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/border_layout"
            android:fontFamily="@font/sawarabi"
            android:hint="@string/modificar_nivel_acceso_usuario"
            android:padding="10dp"
            android:textColor="@color/color_font_principal"
            android:textColorHint="@color/color_font_secundario_gris_medio"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etAreaModificar" />

        <ImageView
            android:id="@+id/ivLogoModificar"
            android:layout_width="49dp"
            android:layout_height="54dp"
            android:layout_marginEnd="212dp"
            android:src="@drawable/ic_modificar_usuario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>